# paperless-chandra

./: .gitignore  Dockerfile  README.md  deploy-unraid.sh  docker-run.sh  pyproject.toml  unraid-template.xml
src/chandra_paperless/: __init__.py  __main__.py  chandra_client.py  config.py  daemon.py  main.py  paperless_client.py  rules.py  worker.py
tests/: test_chandra_client.py  test_config.py  test_paperless_client.py  test_rules.py  test_worker.py
